prevent datepicker to hide behind navbar and map related to #300

--- a/client/styles/_global.scss
+++ b/client/styles/_global.scss
@@ -13,6 +13,10 @@
 	}
 }
 
+.datepicker {
+	z-index: $zindex-navbar-fixed + 1 !important;
+}
+
 .datepicker-dropdown.datepicker-orient-top:after {
 	border-top-color: $dropdown-bg;
 }
